Update setup-rider-docker.sh